--- a/eRestaurantDemo/eRestaurantSystem/eRestaurantSystem.csproj
+++ b/eRestaurantDemo/eRestaurantSystem/eRestaurantSystem.csproj
@@ -41,16 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Reservation.cs" />
-    <Compile Include="Entities\SpecialEvent.cs" />
-    <Compile Include="Entities\Table.cs" />
+    <Compile Include="DAL\Entities\Reservation.cs" />
+    <Compile Include="DAL\Entities\SpecialEvent.cs" />
+    <Compile Include="DAL\Entities\Table.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="BLL\" />
-    <Folder Include="DAL\" />
-    <Folder Include="Entities\DTOs\" />
-    <Folder Include="Entities\POCOs\" />
+    <Folder Include="DAL\DTOs\" />
+    <Folder Include="DAL\POCOs\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
