Setup of connection config

--- a/eRestaurantDemo/eRestaurantWebsite/Web.config
+++ b/eRestaurantDemo/eRestaurantWebsite/Web.config
@@ -8,9 +8,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-eRestaurantWebsite-cbd6d3bf-505f-4ba7-9175-d309ac84e87d;AttachDbFilename=|DataDirectory|\aspnet-eRestaurantWebsite-cbd6d3bf-505f-4ba7-9175-d309ac84e87d.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <connectionStrings configSource="WebConnectionString.config"/>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
@@ -98,6 +96,9 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <context type="eRestaurantSystem.DAL.eRestaurantContext, eRestaurantSystem" disableDatabaseInitialization="true"></context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
