--- a/eRestaurantDemo/eRestaurantWebsite/Web.config
+++ b/eRestaurantDemo/eRestaurantWebsite/Web.config
@@ -8,7 +8,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings configSource="WebConnectionString.config"/>
+  <connectionStrings configSource="WebConnectionString.config"/> 
+
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
@@ -97,7 +98,8 @@
   </runtime>
   <entityFramework>
     <contexts>
-      <context type="eRestaurantSystem.DAL.eRestaurantContext, eRestaurantSystem" disableDatabaseInitialization="true"></context>
+      <context type="eRestaurantSystem.DAL.eRestaurantContext, 
+               eRestaurantSystem" disableDatabaseInitialization="true"></context>
     </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
