--- a/eRestaurantDemo/eRestaurantWebsite/WebConnectionString.config
+++ b/eRestaurantDemo/eRestaurantWebsite/WebConnectionString.config
@@ -2,7 +2,7 @@
   <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-eRestaurantWebsite-cbd6d3bf-505f-4ba7-9175-d309ac84e87d;AttachDbFilename=|DataDirectory|\aspnet-eRestaurantWebsite-cbd6d3bf-505f-4ba7-9175-d309ac84e87d.mdf;Integrated Security=SSPI" 
        providerName="System.Data.SqlClient" />
   <add name="EatIn"
-       connectionString="Data Source=.; Initial Catalog=Erestaurant; Integrated Security=SSPI"
+       connectionString="Data Source=.; Initial Catalog=eRestaurant; Integrated Security=SSPI"
        providerName="System.Data.SqlClient" />
 </connectionStrings>
 
