Seating Summary implementation

--- a/eRestaurantDemo/eRestaurantSystem/eRestaurantSystem.csproj
+++ b/eRestaurantDemo/eRestaurantSystem/eRestaurantSystem.csproj
@@ -51,6 +51,7 @@
     <Compile Include="BLL\AdminController.cs" />
     <Compile Include="BusinessRuleException.cs" />
     <Compile Include="DAL\DTOs\MenuCategoryItems.cs" />
+    <Compile Include="DAL\DTOs\ReservationCollection.cs" />
     <Compile Include="DAL\DTOs\ReservationsByDate.cs" />
     <Compile Include="DAL\Entities\Bill.cs" />
     <Compile Include="DAL\Entities\BillItem.cs" />
@@ -64,7 +65,10 @@
     <Compile Include="DAL\POCOs\CategoryMenuItems.cs" />
     <Compile Include="DAL\POCOs\MenuItem.cs" />
     <Compile Include="DAL\POCOs\ReservationDetail.cs" />
+    <Compile Include="DAL\POCOs\ReservationSummary.cs" />
+    <Compile Include="DAL\POCOs\SeatingSummary.cs" />
     <Compile Include="DAL\POCOs\WaiterBilling.cs" />
+    <Compile Include="DAL\POCOs\WaiterOnDuty.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
