--- a/eRestaurantDemo/eRestaurantSystem/eRestaurantSystem.csproj
+++ b/eRestaurantDemo/eRestaurantSystem/eRestaurantSystem.csproj
@@ -38,6 +38,12 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -58,6 +64,8 @@
     <Compile Include="DAL\Entities\Item.cs" />
     <Compile Include="DAL\Entities\MenuCategory.cs" />
     <Compile Include="DAL\Entities\Reservation.cs" />
+    <Compile Include="DAL\Entities\Security\ApplicationUser.cs" />
+    <Compile Include="DAL\Entities\Security\UserManager.cs" />
     <Compile Include="DAL\Entities\SpecialEvent.cs" />
     <Compile Include="DAL\Entities\Table.cs" />
     <Compile Include="DAL\Entities\Waiter.cs" />
@@ -69,6 +77,7 @@
     <Compile Include="DAL\POCOs\SeatingSummary.cs" />
     <Compile Include="DAL\POCOs\WaiterBilling.cs" />
     <Compile Include="DAL\POCOs\WaiterOnDuty.cs" />
+    <Compile Include="DAL\Security\ApplicationDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
