--- a/eRestaurantDemo/eRestaurantSystem/eRestaurantSystem.csproj
+++ b/eRestaurantDemo/eRestaurantSystem/eRestaurantSystem.csproj
@@ -65,7 +65,9 @@
     <Compile Include="DAL\Entities\MenuCategory.cs" />
     <Compile Include="DAL\Entities\Reservation.cs" />
     <Compile Include="DAL\Entities\Security\ApplicationUser.cs" />
-    <Compile Include="DAL\Entities\Security\UserManager.cs" />
+    <Compile Include="BLL\Security\RoleManager.cs" />
+    <Compile Include="DAL\Entities\Security\SecurityRoles.cs" />
+    <Compile Include="BLL\Security\UserManager.cs" />
     <Compile Include="DAL\Entities\SpecialEvent.cs" />
     <Compile Include="DAL\Entities\Table.cs" />
     <Compile Include="DAL\Entities\Waiter.cs" />
