--- a/eRestaurantDemo/eRestaurantWebsite/WebConnectionString.config
+++ b/eRestaurantDemo/eRestaurantWebsite/WebConnectionString.config
@@ -1,9 +1,12 @@
 ﻿  <connectionStrings >
-    <add name="DefaultConnection"
+    <!--<add name="DefaultConnection"
          connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-eRestaurantWebsite-7dc67c5a-906a-455b-97d2-22296b0933f8;AttachDbFilename=|DataDirectory|\aspnet-eRestaurantWebsite-7dc67c5a-906a-455b-97d2-22296b0933f8.mdf;Integrated Security=SSPI"
-         providerName="System.Data.SqlClient" />
+         providerName="System.Data.SqlClient" />-->
     <add name="EatIn"
          connectionString="Data Source=.;Initial Catalog=eRestaurant;Integrated Security=SSPI"
          providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection"
+      connectionString="Data Source=.;Initial Catalog=eRestaurant;Integrated Security=SSPI"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
                
